==> heqichen/plane/communication/crow/RF24.cpp <==
#include "nrf24l01.h"
#include "config.h"
#include "RF24.h"

void RF24::begin(void)
{
	pinMode(mCePin, OUTPUT);
	pinMode(mCsnPin, OUTPUT);

	SPI.begin();
	resetSpi();

	ce(LOW);
	csn(HIGH);

	// Must allow the radio time to settle else configuration bits will not necessarily stick.
	// This is actually only required following power up but some settling time also appears to
	// be required after resets too. For full coverage, we'll always assume the worst.
	// Enabling 16b CRC is by far the most obvious case if the wrong timing is used - or skipped.
	// Technically we require 4.5ms + 14us as a worst case. We'll just call it 5ms for good measure.
	// WARNING: Delay is based on P-variant whereby non-P *may* require different timing.
	delay(5);

	setRetries(4, 15);	//restore to 4*250us timeout, 15 retransmit	P58

	// Restore our default PA level
	setPALevel(RF24_PA_MAX) ;

	mIs24l01Plus = test24l01Plus();
	setDataRate(RF24_1MBPS);
	//here

	// Initialize CRC and request 2-byte (16bit) CRC
	setCRCLength( RF24_CRC_16 ) ;
	
	// Disable dynamic payloads, to match mIsDynamicPayloadsEnabled setting
	writeRegister(DYNPD,0);

	// Reset current status
	// Notice reset and flush is the last thing we do
	writeRegister(STATUS,_BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );

	// Set up default configuration.	Callers can always change it later.
	// This channel should be universally safe and not bleed over into adjacent
	// spectrum.
	setChannel(76);

	// Flush buffers
	flush_rx();
	flush_tx();
}

void RF24::setRetries(uint8_t delay, uint8_t count)
{
	writeRegister(SETUP_RETR, (delay & 0x0F) << ARD | (count & 0x0F) << ARC);
}

void RF24::setPALevel(uint8_t level)
{
	uint8_t setup = readRegister(RF_SETUP) ;
	setup &= ~(RF_PWR_MASK) ;
	if (level > RF24_PA_MAX)
	{
		level = RF24_PA_MAX;
		return ;
	}
	setup |= level;
	writeRegister(RF_SETUP, setup);
}

uint8_t RF24::getPALevel(void)
{
	uint8_t power = readRegister(RF_SETUP) & RF_PWR_MASK;
	return power;
}

void RF24::setDataRate(uint8_t speed)
{
	if(speed==RF24_250KBPS && !mIs24l01Plus)
	{
		return ;
	}
	uint8_t setup = readRegister(RF_SETUP);
	setup &= ~(_BV(RF_DR_LOW) | _BV(RF_DR_HIGH));
	setup |= speed;
	writeRegister(RF_SETUP,setup);
	mIsWideBand = (speed == RF24_2MBPS);
}

uint8_t RF24::getDataRate(void)
{
	return readRegister(RF_SETUP) & (_BV(RF_DR_LOW) | _BV(RF_DR_HIGH));
}

void RF24::setCRCLength(uint8_t length)
{
	uint8_t config = readRegister(CONFIG) & ~( _BV(CRCO) | _BV(EN_CRC)) ;
	
	if ( length == RF24_CRC_DISABLED )
	{
		// Do nothing, we turned it off above. 
		//nrf24l01 must do crc check
		return ;
	}
	config |= length;
	writeRegister(CONFIG, config) ;
}

uint8_t RF24::getCRCLength(void)
{
	return readRegister(CONFIG) & ( _BV(CRCO) | _BV(EN_CRC)) ;
}

void RF24::disableCRC( void )
{
	uint8_t disable = readRegister(CONFIG) & ~_BV(EN_CRC) ;
	writeRegister(CONFIG, disable) ;
}

uint8_t RF24::readRegister(uint8_t reg)
{
	csn(LOW);
	SPI.transfer( R_REGISTER | ( REGISTER_MASK & reg ) );
	uint8_t result = SPI.transfer(0xFF);
	csn(HIGH);

	return result;
}

uint8_t RF24::writeRegister(uint8_t reg, const uint8_t* buf, uint8_t len)
{
	uint8_t status;

	csn(LOW);
	status = SPI.transfer( W_REGISTER | ( REGISTER_MASK & reg ) );
	while (len--)
	SPI.transfer(*buf++);
	csn(HIGH);

	return status;
}

uint8_t RF24::writeRegister(uint8_t reg, uint8_t value)
{
	uint8_t status;

	csn(LOW);
	status = SPI.transfer( W_REGISTER | ( REGISTER_MASK & reg ) );
	SPI.transfer(value);
	csn(HIGH);

	return status;
}

uint8_t RF24::readRegister(uint8_t reg, uint8_t* buf, uint8_t len)
{
	uint8_t status;

	csn(LOW);
	status = SPI.transfer( R_REGISTER | ( REGISTER_MASK & reg ) );
	while ( len-- )
	*buf++ = SPI.transfer(0xff);

	csn(HIGH);

	return status;
}

uint8_t RF24::write_payload(const void* buf, uint8_t len)
{
	uint8_t status;

	const uint8_t* current = reinterpret_cast<const uint8_t*>(buf);

	uint8_t data_len = min(len,mPayloadSize);
	uint8_t blank_len = mIsDynamicPayloadsEnabled ? 0 : mPayloadSize - data_len;
	
	//printf("[Writing %u bytes %u blanks]",data_len,blank_len);
	
	csn(LOW);
	status = SPI.transfer( W_TX_PAYLOAD );
	while ( data_len-- )
	SPI.transfer(*current++);
	while ( blank_len-- )
	SPI.transfer(0);
	csn(HIGH);

	return status;
}

uint8_t RF24::read_payload(void* buf, uint8_t len)
{
	uint8_t status;
	uint8_t* current = reinterpret_cast<uint8_t*>(buf);

	uint8_t data_len = min(len,mPayloadSize);
	uint8_t blank_len = mIsDynamicPayloadsEnabled ? 0 : mPayloadSize - data_len;
	
	//printf("[Reading %u bytes %u blanks]",data_len,blank_len);
	
	csn(LOW);
	status = SPI.transfer( R_RX_PAYLOAD );
	while ( data_len-- )
	*current++ = SPI.transfer(0xff);
	while ( blank_len-- )
	SPI.transfer(0xff);
	csn(HIGH);

	return status;
}

uint8_t RF24::flush_rx(void)
{
	uint8_t status;

	csn(LOW);
	status = SPI.transfer( FLUSH_RX );
	csn(HIGH);

	return status;
}

uint8_t RF24::flush_tx(void)
{
	uint8_t status;

	csn(LOW);
	status = SPI.transfer( FLUSH_TX );
	csn(HIGH);

	return status;
}

uint8_t RF24::get_status(void)
{
	uint8_t status;

	csn(LOW);
	status = SPI.transfer( NOP );
	csn(HIGH);

	return status;
}

void RF24::startListening(void)
{
	writeRegister(CONFIG, readRegister(CONFIG) | _BV(PWR_UP) | _BV(PRIM_RX));
	writeRegister(STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );

	// Restore the pipe0 adddress, if exists
	if (mLastPipe0ReadingAddr)
	writeRegister(RX_ADDR_P0, reinterpret_cast<const uint8_t*>(&mLastPipe0ReadingAddr), 5);

	// Flush buffers
	flush_rx();
	flush_tx();

	// Go!
	ce(HIGH);

	// wait for the radio to come up (130us actually only needed)
	delayMicroseconds(130);
}

void RF24::powerDown(void)
{
	writeRegister(CONFIG,readRegister(CONFIG) & ~_BV(PWR_UP));
}

void RF24::powerUp(void)
{
	writeRegister(CONFIG,readRegister(CONFIG) | _BV(PWR_UP));
}

void RF24::startWrite( const void* buf, uint8_t len )
{
	// Transmitter power-up
	writeRegister(CONFIG, ( readRegister(CONFIG) | _BV(PWR_UP) ) & ~_BV(PRIM_RX) );
	delayMicroseconds(150);

	// Send the payload
	write_payload( buf, len );

	// Allons!
	ce(HIGH);
	delayMicroseconds(15);
	ce(LOW);
}

uint8_t RF24::getDynamicPayloadSize(void)
{
	uint8_t result = 0;

	csn(LOW);
	SPI.transfer( R_RX_PL_WID );
	result = SPI.transfer(0xff);
	csn(HIGH);

	return result;
}

bool RF24::read( void* buf, uint8_t len )
{
	// Fetch the payload
	read_payload( buf, len );

	// was this the last of the data available?
	return readRegister(FIFO_STATUS) & _BV(RX_EMPTY);
}

void RF24::openWritingPipe(uint64_t value)
{
	// Note that AVR 8-bit uC's store this LSB first, and the NRF24L01(+)
	// expects it LSB first too, so we're good.

	writeRegister(RX_ADDR_P0, reinterpret_cast<uint8_t*>(&value), 5);
	writeRegister(TX_ADDR, reinterpret_cast<uint8_t*>(&value), 5);

	const uint8_t max_payload_size = 32;
	writeRegister(RX_PW_P0,min(mPayloadSize,max_payload_size));
}

void RF24::openReadingPipe(uint8_t child, uint64_t address)
{
	// If this is pipe 0, cache the address.	This is needed because
	// openWritingPipe() will overwrite the pipe 0 address, so
	// startListening() will have to restore it.
	if (child == 0)
	mLastPipe0ReadingAddr = address;

	if (child <= 6)
	{
	// For pipes 2-5, only write the LSB
	if ( child < 2 )
		writeRegister(pgm_read_byte(&child_pipe[child]), reinterpret_cast<const uint8_t*>(&address), 5);
	else
		writeRegister(pgm_read_byte(&child_pipe[child]), reinterpret_cast<const uint8_t*>(&address), 1);

	writeRegister(pgm_read_byte(&child_payload_size[child]),mPayloadSize);

	// Note it would be more efficient to set all of the bits for all open
	// pipes at once.	However, I thought it would make the calling code
	// more simple to do it this way.
	writeRegister(EN_RXADDR,readRegister(EN_RXADDR) | _BV(pgm_read_byte(&child_pipe_enable[child])));
	}
}

void RF24::enableDynamicPayloads(void)
{
	// Enable dynamic payload throughout the system
	writeRegister(FEATURE,readRegister(FEATURE) | _BV(EN_DPL) );

	// If it didn't work, the features are not enabled
	if ( ! readRegister(FEATURE) )
	{
	// So enable them and try again
	toggle_features();
	writeRegister(FEATURE,readRegister(FEATURE) | _BV(EN_DPL) );
	}

	IF_SERIAL_DEBUG(printf("FEATURE=%i\r\n",readRegister(FEATURE)));

	// Enable dynamic payload on all pipes
	//
	// Not sure the use case of only having dynamic payload on certain
	// pipes, so the library does not support it.
	writeRegister(DYNPD,readRegister(DYNPD) | _BV(DPL_P5) | _BV(DPL_P4) | _BV(DPL_P3) | _BV(DPL_P2) | _BV(DPL_P1) | _BV(DPL_P0));

	mIsDynamicPayloadsEnabled = true;
}

void RF24::enableAckPayload(void)
{
	//
	// enable ack payload and dynamic payload features
	//

	writeRegister(FEATURE,readRegister(FEATURE) | _BV(EN_ACK_PAY) | _BV(EN_DPL) );

	// If it didn't work, the features are not enabled
	if ( ! readRegister(FEATURE) )
	{
	// So enable them and try again
	toggle_features();
	writeRegister(FEATURE,readRegister(FEATURE) | _BV(EN_ACK_PAY) | _BV(EN_DPL) );
	}

	IF_SERIAL_DEBUG(printf("FEATURE=%i\r\n",readRegister(FEATURE)));

	//
	// Enable dynamic payload on pipes 0 & 1
	//

	writeRegister(DYNPD,readRegister(DYNPD) | _BV(DPL_P1) | _BV(DPL_P0));
}

void RF24::writeAckPayload(uint8_t pipe, const void* buf, uint8_t len)
{
	const uint8_t* current = reinterpret_cast<const uint8_t*>(buf);

	csn(LOW);
	SPI.transfer( W_ACK_PAYLOAD | ( pipe & B111 ) );
	const uint8_t max_payload_size = 32;
	uint8_t data_len = min(len,max_payload_size);
	while ( data_len-- )
	SPI.transfer(*current++);

	csn(HIGH);
}

void RF24::setAutoAck(bool enable)
{
	if ( enable )
	writeRegister(EN_AA, B111111);
	else
	writeRegister(EN_AA, 0);
}

void RF24::setAutoAck( uint8_t pipe, bool enable )
{
	if ( pipe <= 6 )
	{
	uint8_t en_aa = readRegister( EN_AA ) ;
	if( enable )
	{
		en_aa |= _BV(pipe) ;
	}
	else
	{
		en_aa &= ~_BV(pipe) ;
	}
	writeRegister( EN_AA, en_aa ) ;
	}
}

bool RF24::testRPD(void)
{
	return ( readRegister(RPD) & 1 ) ;
}
