==> roboime/SSL_Firmware_HAL/RF24.cpp <==
#include "RF24.hpp"
#include <stdio.h>
#define MAX(x, y) (((x) > (y)) ? (x) : (y))
#define MIN(x, y) (((x) < (y)) ? (x) : (y))
#define _BOOL(x) (((x)>0) ? 1:0)

uint8_t RF24::read_register(uint8_t reg)
{
	uint8_t spiBuf[3];
	uint8_t retData;
	//Put CSN low
	csn(0);
	//Transmit register address
	spiBuf[0] = reg&0x1F;
	HAL_SPI_Transmit(&nrf24_hspi, spiBuf, 1, 100);
	//Receive data
	HAL_SPI_Receive(&nrf24_hspi, &spiBuf[1], 1, 100);
	retData = spiBuf[1];
	//Bring CSN high
	csn(1);
	return retData;
}

void RF24::write_register(uint8_t reg, uint8_t value)
{
	uint8_t spiBuf[3];
	//Put CSN low
	csn(0);
	//Transmit register address and data
	spiBuf[0] = reg|0x20;
	spiBuf[1] = value;
	HAL_SPI_Transmit(&nrf24_hspi, spiBuf, 2, 100);
	//Bring CSN high
	csn(1);
}

void RF24::write_payload(const void* buf, uint8_t len)
{
	uint8_t wrPayloadCmd;
	//Bring CSN low
	csn(0);
	//Send Write Tx payload command followed by pbuf data
	wrPayloadCmd = CMD_W_TX_PAYLOAD;
	HAL_SPI_Transmit(&nrf24_hspi, &wrPayloadCmd, 1, 100);
	HAL_SPI_Transmit(&nrf24_hspi, (uint8_t *)buf, len, 100);
	//Bring CSN high
	csn(1);
}

void RF24::read_payload(void* buf, uint8_t len)
{
	uint8_t cmdRxBuf;
	//Get data length using payload size
	uint8_t data_len = MIN(len, getPayloadSize());
	//Read data from Rx payload buffer
	csn(0);
	cmdRxBuf = CMD_R_RX_PAYLOAD;
	HAL_SPI_Transmit(&nrf24_hspi, &cmdRxBuf, 1, 100);
	HAL_SPI_Receive(&nrf24_hspi, (uint8_t *)buf, data_len, 100);
	csn(1);
}

void RF24::flush_tx(void)
{
	write_register(CMD_FLUSH_TX, 0xFF);
}

void RF24::flush_rx(void)
{
	write_register(CMD_FLUSH_RX, 0xFF);
}

uint8_t RF24::get_status(void)
{
	uint8_t statReg;
	statReg = read_register(REG_STATUS);
	return statReg;
}

void RF24::begin(GPIO_TypeDef *nrf24CSNPORT, uint16_t nrfCSN_Pin, GPIO_TypeDef *nrf24CEPORT, uint16_t nrfCE_Pin, SPI_HandleTypeDef nrfSPI)
{
	//Copy SPI handle variable
	memcpy(&nrf24_hspi, &nrfSPI, sizeof(nrfSPI));
	//Copy Pins and Port variables
	nrf24_CSN_PORT = nrf24CSNPORT;
	nrf24_CSN_PIN = nrfCSN_Pin;
	nrf24_CE_PORT = nrf24CEPORT;
	nrf24_CE_PIN = nrfCE_Pin;

	//Put pins to idle state
	csn(1);
	ce(0);
	//5 ms initial delay
	HAL_Delay(5);

	//Soft Reset Registers default values
	write_register(0x00, 0x08);
	write_register(0x01, 0x3f);
	write_register(0x02, 0x03);
	write_register(0x03, 0x03);
	write_register(0x04, 0x03);
	write_register(0x05, 0x02);
	write_register(0x06, 0x0f);
	write_register(0x07, 0x0e);
	write_register(0x08, 0x00);
	write_register(0x09, 0x00);
	uint8_t pipeAddrVar[6];
	pipeAddrVar[4]=0xE7; pipeAddrVar[3]=0xE7; pipeAddrVar[2]=0xE7; pipeAddrVar[1]=0xE7; pipeAddrVar[0]=0xE7;
	write_registerN(0x0A, pipeAddrVar, 5);
	pipeAddrVar[4]=0xC2; pipeAddrVar[3]=0xC2; pipeAddrVar[2]=0xC2; pipeAddrVar[1]=0xC2; pipeAddrVar[0]=0xC2;
	write_registerN(0x0B, pipeAddrVar, 5);
	write_register(0x0C, 0xC3);
	write_register(0x0D, 0xC4);
	write_register(0x0E, 0xC5);
	write_register(0x0F, 0xC6);
	pipeAddrVar[4]=0xE7; pipeAddrVar[3]=0xE7; pipeAddrVar[2]=0xE7; pipeAddrVar[1]=0xE7; pipeAddrVar[0]=0xE7;
	write_registerN(0x10, pipeAddrVar, 5);
	write_register(0x11, 0);
	write_register(0x12, 0);
	write_register(0x13, 0);
	write_register(0x14, 0);
	write_register(0x15, 0);
	write_register(0x16, 0);

	ACTIVATE_cmd();
	write_register(0x1c, 0);
	write_register(0x1d, 0);
	//printRadioSettings();
	//Initialise retries 15 and delay 1250 usec
	setRetries(15, 15);
	//Initialise PA level to max (0dB)
	setPALevel(RF24_PA_0dB);
	//Initialise data rate to 1Mbps
	setDataRate(RF24_2MBPS);
	//Initalise CRC length to 16-bit (2 bytes)
	setCRCLength(RF24_CRC_16);
	//Disable dynamic payload
	disableDynamicPayloads();
	//Set payload size
	setPayloadSize(32);

	//Reset status register
	resetStatus();
	//Initialise channel to 76
	setChannel(76);
	//Flush buffers
	flush_tx();
	flush_rx();

	powerDown();

}

void RF24::startListening(void)
{
	//Power up and set to RX mode
	write_register(REG_CONFIG, read_register(REG_CONFIG) | (1UL<<1) |(1UL <<0));
	//Restore pipe 0 address if exists
	if(pipe0_reading_address)
		write_registerN(REG_RX_ADDR_P0, (uint8_t *)(&pipe0_reading_address), 5);

	//Flush buffers
	flush_tx();
	flush_rx();
	//Set CE HIGH to start listenning
	ce(1);
	//Wait for 130 uSec for the radio to come on
	DelayMicroSeconds(150);
}

bool RF24::read( void* buf, uint8_t len )
{
	read_payload( buf, len );
	uint8_t rxStatus = read_register(REG_FIFO_STATUS) & _BV(BIT_RX_EMPTY);
	flush_rx();
	getDynamicPayloadSize();
	return rxStatus;
}

void RF24::openWritingPipe(uint64_t address)
{
	write_registerN(REG_RX_ADDR_P0, (uint8_t *)(&address), 5);
  write_registerN(REG_TX_ADDR, (uint8_t *)(&address), 5);

	const uint8_t max_payload_size = 32;
  write_register(REG_RX_PW_P0,MIN(payload_size,max_payload_size));
}

void RF24::openReadingPipe(uint8_t number, uint64_t address)
{
	if (number == 0)
    pipe0_reading_address = address;

	if(number <= 6)
	{
		if(number < 2)
		{
			//Address width is 5 bytes
			write_registerN(ADDR_REGS[number], (uint8_t *)(&address), 5);
		}
		else
		{
			write_registerN(ADDR_REGS[number], (uint8_t *)(&address), 1);
		}
		//Write payload size
		write_register(RF24_RX_PW_PIPE[number],payload_size);
		//Enable pipe
		write_register(REG_EN_RXADDR, read_register(REG_EN_RXADDR) | _BV(number));
	}

}

void RF24::setRetries(uint8_t delay, uint8_t count)
{
	write_register(REG_SETUP_RETR,(delay&0xf)<<BIT_ARD | (count&0xf)<<BIT_ARC);
}

uint8_t RF24::getDynamicPayloadSize(void)
{
	return read_register(CMD_R_RX_PL_WID);
}

void RF24::enableAckPayload(void)
{
	//Need to enable dynamic payload and Ack payload together
	 write_register(REG_FEATURE,read_register(REG_FEATURE) | _BV(BIT_EN_ACK_PAY) | _BV(BIT_EN_DPL) );
	if(!read_register(REG_FEATURE))
	{
		ACTIVATE_cmd();
		write_register(REG_FEATURE,read_register(REG_FEATURE) | _BV(BIT_EN_ACK_PAY) | _BV(BIT_EN_DPL) );
	}
	// Enable dynamic payload on pipes 0 & 1
	write_register(REG_DYNPD,read_register(REG_DYNPD) | _BV(BIT_DPL_P1) | _BV(BIT_DPL_P0));
}

void RF24::enableDynamicPayloads(void)
{
	//Enable dynamic payload through FEATURE register
	write_register(REG_FEATURE,read_register(REG_FEATURE) |  _BV(BIT_EN_DPL) );
	if(!read_register(REG_FEATURE))
	{
		ACTIVATE_cmd();
		write_register(REG_FEATURE,read_register(REG_FEATURE) |  _BV(BIT_EN_DPL) );
	}
	//Enable Dynamic payload on all pipes
	write_register(REG_DYNPD,read_register(REG_DYNPD) | _BV(BIT_DPL_P5) | _BV(BIT_DPL_P4) | _BV(BIT_DPL_P3) | _BV(BIT_DPL_P2) | _BV(BIT_DPL_P1) | _BV(BIT_DPL_P0));
  dynamic_payloads_enabled = true;

}

void RF24::setAutoAck(bool enable)
{
	if ( enable )
    write_register(REG_EN_AA, 0x3F);
  else
    write_register(REG_EN_AA, 0x00);
}

void RF24::setPALevel( rf24_pa_dbm_e level )
{
	uint8_t setup = read_register(REG_RF_SETUP) ;
  setup &= ~(_BV(RF_PWR_LOW) | _BV(RF_PWR_HIGH)) ;

  // switch uses RAM (evil!)
  if ( level == RF24_PA_0dB)
  {
    setup |= (_BV(RF_PWR_LOW) | _BV(RF_PWR_HIGH)) ;
  }
  else if ( level == RF24_PA_m6dB )
  {
    setup |= _BV(RF_PWR_HIGH) ;
  }
  else if ( level == RF24_PA_m12dB )
  {
    setup |= _BV(RF_PWR_LOW);
  }
  else if ( level == RF24_PA_m18dB )
  {
    // nothing
  }
  else if ( level == RF24_PA_ERROR )
  {
    // On error, go to maximum PA
    setup |= (_BV(RF_PWR_LOW) | _BV(RF_PWR_HIGH)) ;
  }

  write_register( REG_RF_SETUP, setup ) ;
}

rf24_pa_dbm_e RF24::getPALevel( void )
{
	rf24_pa_dbm_e result = RF24_PA_ERROR ;
  uint8_t power = read_register(REG_RF_SETUP) & (_BV(RF_PWR_LOW) | _BV(RF_PWR_HIGH));

  // switch uses RAM (evil!)
  if ( power == (_BV(RF_PWR_LOW) | _BV(RF_PWR_HIGH)) )
  {
    result = RF24_PA_0dB ;
  }
  else if ( power == _BV(RF_PWR_HIGH) )
  {
    result = RF24_PA_m6dB ;
  }
  else if ( power == _BV(RF_PWR_LOW) )
  {
    result = RF24_PA_m12dB ;
  }
  else
  {
    result = RF24_PA_m18dB ;
  }

  return result ;
}

bool RF24::setDataRate(rf24_datarate_e speed)
{
	bool result = false;
  uint8_t setup = read_register(REG_RF_SETUP) ;

  // HIGH and LOW '00' is 1Mbs - our default
  wide_band = false ;
  setup &= ~(_BV(RF_DR_LOW) | _BV(RF_DR_HIGH)) ;
  if( speed == RF24_250KBPS )
  {
    // Must set the RF_DR_LOW to 1; RF_DR_HIGH (used to be RF_DR) is already 0
    // Making it '10'.
    wide_band = false ;
    setup |= _BV( RF_DR_LOW ) ;
  }
  else
  {
    // Set 2Mbs, RF_DR (RF_DR_HIGH) is set 1
    // Making it '01'
    if ( speed == RF24_2MBPS )
    {
      wide_band = true ;
      setup |= _BV(RF_DR_HIGH);
    }
    else
    {
      // 1Mbs
      wide_band = false ;
    }
  }
  write_register(REG_RF_SETUP,setup);

  // Verify our result
  if ( read_register(REG_RF_SETUP) == setup )
  {
    result = true;
  }
  else
  {
    wide_band = false;
  }

  return result;
}

rf24_datarate_e RF24::getDataRate( void )
{
	rf24_datarate_e result ;
  uint8_t dr = read_register(REG_RF_SETUP) & (_BV(RF_DR_LOW) | _BV(RF_DR_HIGH));

  // switch uses RAM (evil!)
  // Order matters in our case below
  if ( dr == _BV(RF_DR_LOW) )
  {
    // '10' = 250KBPS
    result = RF24_250KBPS ;
  }
  else if ( dr == _BV(RF_DR_HIGH) )
  {
    // '01' = 2MBPS
    result = RF24_2MBPS ;
  }
  else
  {
    // '00' = 1MBPS
    result = RF24_1MBPS ;
  }
  return result ;
}

void RF24::setCRCLength(rf24_crclength_e length)
{
	uint8_t config = read_register(REG_CONFIG) & ~( _BV(BIT_CRCO) | _BV(BIT_EN_CRC)) ;

  // switch uses RAM
  if ( length == RF24_CRC_DISABLED )
  {
    // Do nothing, we turned it off above.
  }
  else if ( length == RF24_CRC_8 )
  {
    config |= _BV(BIT_EN_CRC);
  }
  else
  {
    config |= _BV(BIT_EN_CRC);
    config |= _BV( BIT_CRCO );
  }
  write_register( REG_CONFIG, config );
}

rf24_crclength_e RF24::getCRCLength(void)
{
	rf24_crclength_e result = RF24_CRC_DISABLED;
  uint8_t config = read_register(REG_CONFIG) & ( _BV(BIT_CRCO) | _BV(BIT_EN_CRC)) ;

  if ( config & _BV(BIT_EN_CRC ) )
  {
    if ( config & _BV(BIT_CRCO) )
      result = RF24_CRC_16;
    else
      result = RF24_CRC_8;
  }

  return result;
}

void RF24::disableCRC( void )
{
	uint8_t disable = read_register(REG_CONFIG) & ~_BV(BIT_EN_CRC) ;
  write_register( REG_CONFIG, disable ) ;
}

void RF24::powerUp(void)
{
	write_register(REG_CONFIG,read_register(REG_CONFIG) | _BV(BIT_PWR_UP));
}

void RF24::powerDown(void)
{
	write_register(REG_CONFIG,read_register(REG_CONFIG) & ~_BV(BIT_PWR_UP));
}

void RF24::startWrite( const void* buf, uint8_t len )
{
  // Transmitter power-up
  ce(0);
  write_register(REG_CONFIG, ( read_register(REG_CONFIG) | _BV(BIT_PWR_UP) ) & ~_BV(BIT_PRIM_RX) );
  ce(1);
  DelayMicroSeconds(150);

  // Send the payload
  write_payload( buf, len );

  // Enable Tx for 15usec
  ce(1);
  DelayMicroSeconds(15);
  ce(0);
}

void RF24::writeAckPayload(uint8_t pipe, const void* buf, uint8_t len)
{
	const uint8_t* current = (uint8_t *)buf;
	const uint8_t max_payload_size = 32;
  uint8_t data_len = MIN(len,max_payload_size);

  csn(0);
	write_registerN(CMD_W_ACK_PAYLOAD | ( pipe & 0x7 ) , current, data_len);
  csn(1);
}

bool RF24::testRPD(void)
{
	return read_register(REG_RPD) & 1;
}
